@@ -3,6 +3,8 @@ Revision history for Perl application Lstu
 0.22-0 ????-??-??
 	- Disable URLs instead of removing them (prevents spammers to reuse a
 	  deleted shortened URL)
+	- Slugify custom URLs and add a suffix (-2, -3…) if the custom URL is
+	  already taken
 
 0.21-3 2018-11-19
 	- Fix Pg sessions and urls delete fonctions
